CVS - Eric Kidd <eric.kidd@pobox.com> - Ongoing

  * wchar_t support can now be disabled.
  * New interop server.
  * Parts of an interop client.
  * Lots of interop fixes.
  * Mike Bytnar: Solaris build fixes.  Thanks!
  * Other stuff.

0.9.9 - Eric Kidd <eric.kidd@pobox.com> - 03 April 2001

  * xml-rpc-api2cpp now generates usable proxy classes.
  * Luke Howard: Default method support.
  * Abstract XML parser API (but you'll need to edit makefiles to use it).
  * Implemented a configurable size limit for XML data off the network.

  * Support for building and parsing XML-RPC values using wchar_t strings.
  * Basic UTF-8 handling: Refuse to process invalid UTF-8 from network,
    print warnings when sending invalid UTF-8 *to* network.
  * Highly robust UTF-8 validator, decoder, encoder.

  * Modularized the build system--build only what you need.
  * Integrated Electric Fence into build system (optional).

  * Fixed all recent, reproducible bugs in CVS. These were generally
    Windows build bugs.
  * Andy Maloney: Build fixes for Windows.
  * Mike Bytnar: Build fixes for Solaris.
  * RedHat 7 warning fixes.

0.9.8 - Eric Kidd <eric.kidd@pobox.com> - 19 February 2001

  * J. Alan Eldridge, Rosimildo daSIlva: Build fixes.
  * Send 'encoding="UTF-8"' in XML prologue.

0.9.7 - Eric Kidd <eric.kidd@pobox.com> - 14 February 2001

  * SECURITY: Configurable nesting limits (see advisory 1) to prevent
    denial-of-service attacks and stack overflow.
  * Win32 build fixes from Alex Olugbile.
  * Function name fix from Luke Howard.

0.9.6w - Eric Kidd <eric.kidd@pobox.com> - 02 February 2001

  * Merged Win32 VC/C++ changes from Alex and Ian.
  * Merged Win32 Cygwin changes from Rosimildo.

0.9.6 - Eric Kidd <eric.kidd@pobox.com> - 30 January 2001

  * Fixed lots of gcc warnings.
  * Added a new 'xmlrpc_server_info' class, which allows you to
    set options on a per-server basis.
  * Added support for HTTP Basic authentication.